# poseidon

./: Cargo.toml
src/: grain.rs  matrix.rs  permutation.rs  poseidon.rs  spec.rs
