[package]
name = "poseidon"
version = "0.2.0"
authors = ["kilic <kiliconu@itu.edu.tr>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
halo2_proofs = { git = "https://github.com/DelphinusLab/halo2-gpu-specific.git", default-features = true }
subtle = { version = "2.3", default-features = false }

[dev-dependencies]
rand_core = { version = "0.6", default-features = false }

[features]
default = []
cuda = ["halo2_proofs/cuda"]
